--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   google_fonts: ^6.1.0
   responsive_framework: ^1.1.1
   carousel_slider: ^4.2.1
+  url_launcher: ^6.0.9
 
 dev_dependencies:
   flutter_test:
