--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,8 +10,6 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-
   cupertino_icons: ^1.0.2
   google_fonts: ^6.1.0
   responsive_framework: ^1.1.1
@@ -22,7 +20,6 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
-
   flutter_lints: ^2.0.0
 
 flutter:
@@ -31,6 +28,7 @@ flutter:
 
   assets:
     - assets/
+    - assets/devops/
  
 
  
